Sun, 13 Apr 2008 22:27:28 +0200 <thp@perli.net>
Updating message files from source code for 0.11.2 freeze

	* data/messages.pot: Updated from source code
	* data/po/*.po: Updated from messages.pot

Fri, 11 Apr 2008 10:26:50 +0200 <thp@perli.net>
Correct "Close" and "Quit" behaviour

	* data/gpodder.glade: Add a "Close" menu item to the podcasts menu and
	rename the quit item to "Quit" (from "Close) to make the interface
	more consistent and to support both Ctrl+W and Ctrl+Q
	* src/gpodder/gui.py: Correct "Close" and "Quit" behaviour and make
	Close be the "minimize to tray" function when the tray icon is
	enabled; when not enabled, "Close" acts the same way as "Quit" (but is
	left visible, so the Ctrl+W shortcut also works to close gPodder);
	thanks to Harley Laue for the suggestion and initial patch
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=89)

Fri, 11 Apr 2008 10:11:33 +0200 <thp@perli.net>
Make RSS .torrent feeds from different Torrent sites work

	* src/gpodder/libpodcasts.py: If an episode doesn't have an enclosure,
	but its link looks like it's a media/torrent file, we are going do
	interpret that as the enclosure URL; this makes feeds from different
	torrent sites work with gPodder; thanks to Josh Gardner
	<mellowcellofellow@gmail.com> for reporting this bug on Bugzilla
	(http://bugs.gpodder.org/show_bug.cgi?id=74)

Tue, 08 Apr 2008 10:54:01 +0200 <thp@perli.net>
Updated Spanish translation

	* data/po/es.po: Updated Spanish translation from Julio Acuña

Mon, 07 Apr 2008 23:06:53 +0200 <thp@perli.net>
Makre sure we can re-set the locale after changing it

	* src/gpodder/util.py: Make sure we can re-set the locale after
	changing it, and if we cannot, only print a warning, but don't throw
	the exception outside of the function

Mon, 07 Apr 2008 23:05:05 +0200 <thp@perli.net>
Add 64x64 icon for Maemo's main menu and install it

	* data/icons/64/gpodder.png: Added
	* setup.py: Install the 64x64 icon in share/icons/hicolor
