@@ -1,3 +1,11 @@
+Mon, 14 Apr 2008 13:33:44 +0200 <thp@perli.net>
+Merge patch from Jerome Chabod to fix tray icon freeze (bug #55)
+
+	* src/gpodder/trayicon.py: Merge patch from Jerome Chabod to fix the
+	problem with the tray icon actions reported in bug #55; this is
+	basically attachment #33 with some cosmetic fixes
+	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=55)
+
 Sun, 13 Apr 2008 22:27:28 +0200 <thp@perli.net>
 Updating message files from source code for 0.11.2 freeze
 
